--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lint": "eslint --report-unused-disable-directives ./ --cache --format codeframe && echo '\n\\033[34mESLinted!\\033[39m\n'",
     "setup": "npm run clean && npm i",
     "test": "mocha-parallel-tests tests --timeout 10000 --slow 5000",
-    "one-test": "mocha tests/$npm_config_test*.js --timeout 10000 --slow 5000"
+    "one-test": "mocha tests/$npm_config_test* --timeout 10000 --slow 5000"
   },
   "pre-commit": "lint",
   "license": "MIT"
