--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "test": "mocha-parallel-tests tests --timeout 10000 --slow 5000",
     "one-test": "mocha tests/$npm_config_test* --timeout 10000 --slow 5000"
   },
-  "pre-commit": "lint"
+  "pre-commit": [
+    "lint",
+    "test"
+  ],
+  "license": "Unlicense"
 }
