--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,6 @@ insert_final_newline = true
 charset = utf-8
 trim_trailing_whitespace = true
 
-[{package.json,.babelrc}]
+[{*.json,*.html}]
 indent_style = space
 indent_size = 2
