--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "puppeteer-extra-commands",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Some useful commands for puppeteer",
   "maintainers": [
     "Kirill Molchanov <k03.mad@gmail.com"
@@ -15,7 +15,7 @@
   "dependencies": {
     "mkdirp": "0.5.1",
     "moment": "2.22.2",
-    "require.all": "2.0.4"
+    "require-all": "3.0.0"
   },
   "devDependencies": {
     "chai": "4.2.0",
