--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "puppeteer-extra-commands",
-  "version": "2.2.5",
+  "version": "2.2.6",
   "description": "Some useful commands for puppeteer",
   "maintainers": [
     "Kirill Molchanov <k03.mad@gmail.com"
@@ -15,7 +15,8 @@
   "dependencies": {
     "mkdirp": "0.5.1",
     "moment": "2.24.0",
-    "require-all": "3.0.0"
+    "require-all": "3.0.0",
+    "utils-mad": "1.3.1"
   },
   "devDependencies": {
     "chai": "4.2.0",
