--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "scripts": {
     "clean": "rm -rf ./node_modules || true",
-    "lint": "eslint --report-unused-disable-directives ./ --cache --format codeframe && echo '\n\\033[34mESLinted!\\033[39m\n'",
+    "lint": "eslint --report-unused-disable-directives ./ --format codeframe && echo '\n\\033[34mESLinted!\\033[39m\n'",
     "setup": "npm run clean && npm i",
     "test": "mocha-parallel-tests tests --timeout 15000 --slow 5000",
     "one-test": "mocha tests/$npm_config_test* --timeout 15000 --slow 5000"
