--- a/package.json
+++ b/package.json
@@ -15,23 +15,24 @@
   "dependencies": {
     "mkdirp": "0.5.1",
     "require-all": "3.0.0",
-    "utils-mad": "1.11.3"
+    "utils-mad": "1.12.1"
   },
   "devDependencies": {
     "chai": "4.2.0",
-    "eslint": "5.16.0",
-    "eslint-config-k03mad": "2.4.3",
-    "eslint-plugin-const-case": "1.1.10",
-    "eslint-plugin-jsdoc": "8.0.1",
+    "eslint": "6.0.1",
+    "eslint-config-k03mad": "2.5.2",
+    "eslint-plugin-const-case": "1.2.1",
+    "eslint-plugin-jsdoc": "10.0.1",
     "eslint-plugin-node": "9.1.0",
     "eslint-plugin-optimize-regex": "1.1.6",
-    "eslint-plugin-promise": "4.1.1",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-sonarjs": "0.4.0",
     "eslint-plugin-sort-requires": "2.1.0",
-    "eslint-plugin-unicorn": "9.1.0",
+    "eslint-plugin-unicorn": "9.1.1",
     "mocha": "6.1.4",
-    "mocha-parallel-tests": "2.1.2",
+    "mocha-parallel-tests": "2.2.1",
     "pre-commit": "1.2.2",
-    "puppeteer": "1.17.0"
+    "puppeteer": "1.18.1"
   },
   "scripts": {
     "clean": "rm -rf ./node_modules || true",
