--- a/package.json
+++ b/package.json
@@ -7,32 +7,29 @@
   ],
   "repository": "k03mad/puppeteer-extra-commands",
   "engines": {
-    "node": ">=10"
+    "node": ">=11.14"
   },
   "keywords": [
     "puppeteer"
   ],
   "dependencies": {
-    "mkdirp": "0.5.1",
     "require-all": "3.0.0",
-    "utils-mad": "1.21.0"
+    "utils-mad": "8.0.2"
   },
   "devDependencies": {
     "chai": "4.2.0",
-    "eslint": "6.3.0",
-    "eslint-config-k03mad": "3.0.0",
-    "eslint-plugin-const-case": "1.2.2",
-    "eslint-plugin-jsdoc": "15.9.1",
-    "eslint-plugin-node": "10.0.0",
-    "eslint-plugin-optimize-regex": "1.1.6",
+    "eslint": "7.0.0",
+    "eslint-config-k03mad": "5.0.0",
+    "eslint-plugin-jsdoc": "25.4.2",
+    "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-sonarjs": "0.4.0",
+    "eslint-plugin-sonarjs": "0.5.0",
     "eslint-plugin-sort-requires": "2.1.0",
-    "eslint-plugin-unicorn": "10.0.0",
-    "mocha": "6.2.0",
-    "mocha-parallel-tests": "2.2.2",
-    "pre-commit": "1.2.2",
-    "puppeteer": "1.19.0"
+    "eslint-plugin-unicorn": "20.0.0",
+    "husky": "4.2.5",
+    "mocha": "7.1.2",
+    "mocha-parallel-tests": "2.3.0",
+    "puppeteer": "3.1.0"
   },
   "scripts": {
     "clean": "rm -rf ./node_modules || true",
@@ -41,9 +38,5 @@
     "test": "mocha-parallel-tests tests --timeout 15000 --slow 5000",
     "one-test": "mocha tests/$npm_config_test* --timeout 15000 --slow 5000"
   },
-  "pre-commit": [
-    "lint",
-    "test"
-  ],
   "license": "Unlicense"
 }
