--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
     "puppeteer"
   ],
   "dependencies": {
-    "utils-mad": "9.1.1"
+    "utils-mad": "9.1.4"
   },
   "devDependencies": {
     "chai": "4.2.0",
-    "eslint": "7.4.0",
+    "eslint": "7.5.0",
     "eslint-config-k03mad": "5.0.2",
-    "eslint-plugin-jsdoc": "29.2.0",
+    "eslint-plugin-jsdoc": "30.0.3",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-sonarjs": "0.5.0",
     "eslint-plugin-sort-requires": "2.1.0",
-    "eslint-plugin-unicorn": "20.1.0",
+    "eslint-plugin-unicorn": "21.0.0",
     "husky": "4.2.5",
     "mocha": "7.2.0",
     "mocha-parallel-tests": "2.3.0",
-    "puppeteer": "5.1.0"
+    "puppeteer": "5.2.1"
   },
   "scripts": {
     "clean": "rm -rf ./node_modules || true",
     "lint": "eslint ./ --report-unused-disable-directives --format=codeframe --ignore-pattern='!.*'",
-    "setup": "npm run clean && npm i",
+    "setup": "npm i",
     "test": "mocha-parallel-tests tests --timeout 15000 --slow 5000",
     "one-test": "mocha tests/$npm_config_test* --timeout 15000 --slow 5000"
   },
